--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -70,7 +70,7 @@
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
             <!-- <li><a href="single-post.html">Football</a></li>
             <li><a href="single-post.html">Basketball</a></li>
             <li><a href="single-post.html">Tennis</a></li>
