--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -122,13 +122,13 @@
               Get the latest sports news on daily basis. Subscribe for more!
             </p>
             <p>
-              <a href="about.html" class="footer-link-more">Learn More</a>
+              <!-- <a href="about.html" class="footer-link-more">Learn More</a> -->
             </p>
           </div>
           <div class="col-6 col-lg-2">
             <h3 class="footer-heading">Navigation</h3>
             <ul class="footer-links list-unstyled">
-              <li>
+              <!-- <li>
                 <a href="index.html"
                   ><i class="bi bi-chevron-right"></i> Home</a
                 >
@@ -152,7 +152,7 @@
                 <a href="about.html"
                   ><i class="bi bi-chevron-right"></i> About us</a
                 >
-              </li>
+              </li> -->
               <li>
                 <a href="contact.html"
                   ><i class="bi bi-chevron-right"></i> Contact</a
@@ -165,11 +165,11 @@
             <ul class="footer-links list-unstyled">
               
               
-              <li>
+              <!-- <li>
                 <a href="category.html"
                   ><i class="bi bi-chevron-right"></i> Sports</a
                 >
-              </li>
+              </li> -->
             
             </ul>
           </div>
@@ -199,7 +199,7 @@
               <!-- Licensing information: https://bootstrapmade.com/license/ -->
               <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
               Designed by
-              <a href="#">Quincy Charles</a>
+              <a href="https://quincy.bgs.co.ke/">Quincy Charles</a>
             </div>
           </div>
 
